JFR: Missing stack trace during chunk rotation stress

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 21
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b32
    • Verified

        The test TestChunkIntegrity.java fails on Windows.

        Can easily be reproduce 1 out 30 times on Windows and Linux-

        Veryfying chunk: disassembled\\recording_00.jfr 0
        Veryfying chunk: disassembled\\recording_01.jfr 2359
        Veryfying chunk: disassembled\\recording_02.jfr 6221
        Failure file with only event 700 written to: failure.jfr
        ----------System.err:(12/781)----------
        java.lang.AssertionError: Stack trace was null. Event number 700
        at jdk.jfr.jvm.TestChunkIntegrity.assertStressEvent(TestChunkIntegrity.java:153)
        at jdk.jfr.jvm.TestChunkIntegrity.main(TestChunkIntegrity.java:130)
        at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
        at java.base/java.lang.reflect.Method.invoke(Method.java:578)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
        at java.base/java.lang.Thread.run(Thread.java:1623)


        The test is currently mark as "@ignored", but it should be fixed.

              Assignee:
              Markus Grönlund
              Reporter:
              Erik Gahlin
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: