8303134: JFR: Missing stack trace during chunk rotation stress

Reviewed-by: egahlin
Backport-of: 7539cc092d0a6b5604351d19e555101fcff75f58