src/hotspot/share/opto/c2compiler.cpp
@@ -679,6 +679,7 @@ bool C2Compiler::is_intrinsic_supported(const methodHandle& method) {
 #ifdef JFR_HAVE_INTRINSICS
   case vmIntrinsics::_counterTime:
   case vmIntrinsics::_getEventWriter:
+  case vmIntrinsics::_jvm_commit:
 #endif
   case vmIntrinsics::_currentTimeMillis:
   case vmIntrinsics::_nanoTime:
