src/hotspot/share/runtime/stubRoutines.hpp
@@ -259,6 +259,8 @@ class StubRoutines: AllStatic {
 
   JFR_ONLY(static RuntimeStub* _jfr_write_checkpoint_stub;)
   JFR_ONLY(static address _jfr_write_checkpoint;)
+  JFR_ONLY(static RuntimeStub* _jfr_return_lease_stub;)
+  JFR_ONLY(static address _jfr_return_lease;)
 
   // Vector Math Routines
   static address _vector_f_math[VectorSupport::NUM_VEC_SIZES][VectorSupport::NUM_SVML_OP];
@@ -455,6 +457,7 @@ class StubRoutines: AllStatic {
   static address cont_returnBarrierExc(){return _cont_returnBarrierExc; }
 
   JFR_ONLY(static address jfr_write_checkpoint() { return _jfr_write_checkpoint; })
+  JFR_ONLY(static address jfr_return_lease() { return _jfr_return_lease; })
 
   static address select_fill_function(BasicType t, bool aligned, const char* &name);
 
