src/jdk.jfr/share/classes/jdk/jfr/internal/event/EventWriter.java
@@ -63,15 +63,12 @@ public final class EventWriter {
     // The JVM needs access to these values. Don't remove
     private final long threadID;
     private long startPosition;
-    private long startPositionAddress;
     private long currentPosition;
     private long maxPosition;
     private boolean valid;
-    boolean notified; // Not private to avoid being optimized away
     boolean excluded;
 
     private PlatformEventType eventType;
-    private boolean flushOnEnd;
     private boolean largeSize = false;
 
     // User code must not be able to instantiate
@@ -213,10 +210,6 @@ public final class EventWriter {
 
     public void reset() {
         currentPosition = startPosition;
-        if (flushOnEnd) {
-            flushOnEnd = flush();
-        }
-        valid = true;
     }
 
     private boolean isValidForSize(int requestedSize) {
@@ -224,7 +217,7 @@ public final class EventWriter {
             return false;
         }
         if (currentPosition + requestedSize > maxPosition) {
-            flushOnEnd = flush(usedSize(), requestedSize);
+            flush(usedSize(), requestedSize);
             // retry
             if (!valid) {
                 return false;
@@ -233,30 +226,17 @@ public final class EventWriter {
         return true;
     }
 
-    private boolean isNotified() {
-        return notified;
-    }
-
-    private void resetNotified() {
-        notified = false;
-    }
-
-    private void resetStringPool() {
-        StringPool.reset();
-    }
-
     private int usedSize() {
         return (int) (currentPosition - startPosition);
     }
 
-    private boolean flush() {
-        return flush(usedSize(), 0);
+    private void flush() {
+        flush(usedSize(), 0);
     }
 
-    private boolean flush(int usedSize, int requestedSize) {
-        return JVM.flush(this, usedSize, requestedSize);
+    private void flush(int usedSize, int requestedSize) {
+        JVM.flush(this, usedSize, requestedSize);
     }
-
 
     public boolean beginEvent(EventConfiguration configuration, long typeId) {
         // Malicious code could take the EventConfiguration object from one
@@ -278,6 +258,7 @@ public final class EventWriter {
     public boolean endEvent() {
         if (!valid) {
             reset();
+            valid = true;
             return true;
         }
         final int eventSize = usedSize();
@@ -285,7 +266,6 @@ public final class EventWriter {
             reset();
             return true;
         }
-
         if (largeSize) {
             Bits.putInt(startPosition, makePaddedInt(eventSize));
         } else {
@@ -299,32 +279,29 @@ public final class EventWriter {
                 return false;
             }
         }
-
-        if (isNotified()) {
-            resetNotified();
-            resetStringPool();
-            reset();
-            // returning false will trigger restart of the event write attempt
-            return false;
+        long nextPosition = JVM.commit(currentPosition);
+        if (nextPosition == currentPosition) {
+            // Successful commit. Update the writer start position.
+            startPosition = nextPosition;
+            return true;
         }
-        startPosition = currentPosition;
-        unsafe.storeStoreFence();
-        unsafe.putAddress(startPositionAddress, currentPosition);
-        // the event is now committed
-        if (flushOnEnd) {
-            flushOnEnd = flush();
+        // If nextPosition == 0, the event was committed, the underlying buffer lease
+        // returned and new writer positions updated. Nothing to do.
+        if (nextPosition == 0) {
+            return true;
         }
-        return true;
+        // The commit was aborted because of an interleaving epoch shift.
+        // The nextPosition returned is the current start position.
+        // Reset the writer and return false to restart the write attempt.
+        currentPosition = nextPosition;
+        return false;
     }
 
-    private EventWriter(long startPos, long maxPos, long startPosAddress, long threadID, boolean valid, boolean excluded) {
+    private EventWriter(long startPos, long maxPos, long threadID, boolean valid, boolean excluded) {
         startPosition = currentPosition = startPos;
         maxPosition = maxPos;
-        startPositionAddress = startPosAddress;
         this.threadID = threadID;
-        flushOnEnd = false;
         this.valid = valid;
-        notified = false;
         this.excluded = excluded;
     }
 
